infrastructure/gatekeeper/tests/disallow-default-namespace/fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.27
